6471769: Error: assert(_cur_stack_depth == count_frames(),"cur_stack_depth out of sync")

It is more safe to get/update data for suspended threads at a safepoint

Reviewed-by: dcubed, twisti, dholmes